--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
     <script>
         // URL de tu Script de Google
-        const API_URL = "https://script.google.com/macros/s/AKfycbwwFyBzZOt-YwVlWrThuGRP_CwqlJoUV-MjitnZHB04VsBPKEjaEQGY4NKJM0_MtNJT/exec";
-        const REPO_URL = "https://analistadatos-oikos.github.io/Repositorios_Visuales_BI/";
+        const API_URL = "https://script.google.com/macros/s/AKfycbz3VNH9_hX2Iet1a-XCJO4WMDTBLBoCY044dCQsP1ziybAwe-17KelkXl8LntIk9J-_/exec";
+        const REPO_URL = "https://komercialcc.github.io/LogiFoods/";
 
         // 1. Lógica de Sesión Recordada (6 Horas)
         window.onload = () => {
